--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "scripts": {
         "lint": "softvisio-cli lint"
     },
+    "devDependencies": {
+        "uWebSockets.js": "github:uNetworking/uWebSockets.js#v18.11.0"
+    },
     "engines": {
         "node": ">=14.7.0",
         "npm": ">=6.14.7"
