--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,25 +14,15 @@ on:
 
 jobs:
   build:
-    defaults:
-      run:
-        shell: bash
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macos-latest
-    name: build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    container:
+      image: zerocluster/node
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 17
       - run: |
           cd build
           npm i --ignore-scripts
           npm run build
+        shell: bash
