--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          apt update
+          apt install -y git
           cd build
           npm i --ignore-scripts
           npm run build
