--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
     "name": "@softvisio/uws",
     "version": "2.0.5",
     "description": "uWebsocket.js re-packed",
-    "homepage": "https://github.com/softvisio/uws",
+    "homepage": "https://softvisio.github.io/uws/",
     "bugs": {
         "url": "https://github.com/softvisio/uws/issues",
-        "email": "zdm@softvisio.net"
+        "email": "zdm <zdm@softvisio.net>"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/softvisio/uws.git"
     },
     "license": "ISC",
-    "author": "<zdm@softvisio.net>",
+    "author": "zdm <zdm@softvisio.net>",
     "exports": {
         ".": "./lib/uws.js"
     },
