--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "scripts": {
         "install": "node bin/install.mjs"
     },
+    "dependencies": {
+        "@softvisio/external-resources": "^1.1.5"
+    },
     "engines": {
         "node": ">=16.0.0",
         "npm": ">=7.10.0"
