--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
         ".": "./lib/uws.js"
     },
     "types": "./lib/index.d.ts",
+    "files": [
+        "/bin",
+        "/lib",
+        "/resources",
+        "/src"
+    ],
     "scripts": {
         "install": "node bin/install.mjs"
     },
