--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/softvisio-node/uws.git"
+        "url": "git+https://github.com/softvisio-node/uws.git"
     },
     "license": "ISC",
     "author": "zdm <zdm@softvisio.net>",
