chore: update package metadata

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "/src"
     ],
     "scripts": {
-        "install": "node bin/install.js"
+        "install": "node bin/install.js",
+        "publish": "softvisio-cli package publish"
     },
     "peerDependencies": {
         "@softvisio/utils": "^1.1.5"
