--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "/src"
     ],
     "scripts": {
-        "install": "node bin/install.js",
-        "publish": "softvisio-cli package publish"
+        "install": "node bin/install.js"
     },
     "peerDependencies": {
         "@softvisio/utils": "^1.1.5"
