--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
     "name": "@c0rejs/uws",
     "version": "2.11.13",
     "description": "uWebsocket.js re-packed",
-    "homepage": "https://softvisio-node.github.io/uws/",
+    "homepage": "https://c0rejs.github.io/uws/",
     "bugs": {
-        "url": "https://github.com/softvisio-node/uws/issues",
+        "url": "https://github.com/c0rejs/uws/issues",
         "email": "root <root@softvisio.net>"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/softvisio-node/uws.git"
+        "url": "git+https://github.com/c0rejs/uws.git"
     },
     "license": "ISC",
     "author": "root <root@softvisio.net>",
