--- a/.github/workflows/build-resources.yaml
+++ b/.github/workflows/build-resources.yaml
@@ -6,6 +6,10 @@ on:
     types:
       - released
 
+permissions:
+  contents: read
+  packages: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +17,6 @@ jobs:
       image: ghcr.io/zerocluster/node
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v6
       - run: |
